<resources>
    <string name="app_name">Library</string>
    <string name="app_log">登录</string>
    <string name="app_password">请输入密码</string>
    <string name="app_user">请输入账号</string>
    <string name="app_newregister">新用户注册</string>
    <string name="app_forgetpassword">忘记密码?</string>
    <string name="app_newuser">新用户</string>
    <string name="app_login">登录</string>
    <string name="app_home">首页</string>
    <string name="app_video">视频</string>
    <string name="app_tiny">消息</string>
    <string name="app_main">我的</string>
</resources>
