<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.example.lenovo.congyunlong20170815.view.iview.CustomVideoView
        android:id="@+id/videoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="6"
            ></LinearLayout>
        <LinearLayout
            android:id="@+id/main_lindar2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="198dp"
                    android:layout_height="171dp"
                    android:layout_marginLeft="7dp"
                    android:padding="5dp"
                    android:text="A`L OG   有一种生活方式  态度  "
                    android:textColor="@color/colorBai"
                    android:textSize="35sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/main_log"
                        android:layout_width="0dp"
                        android:layout_height="38dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginRight="3.5dp"
                        android:layout_weight="1"
                        android:background="@drawable/ripple"
                        android:text="@string/app_login"
                        android:textColor="@color/coloroff" />
                    <Button
                        android:id="@+id/idn_register"
                        android:layout_width="0dp"
                        android:layout_height="38dp"
                        android:layout_marginLeft="3.5dp"
                        android:layout_marginRight="7dp"
                        android:layout_weight="1"
                        android:background="@drawable/ripple"
                        android:text="@string/app_newuser"
                        android:textColor="@color/coloroff" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_linear"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_user"
                android:numeric="integer"
                android:singleLine="true"
                android:textColor="@color/colorBai"
                android:textColorHint="@color/colorBai"
                />
            <EditText
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_password"
                android:numeric="integer"
                android:singleLine="true"
                android:password="true"
                android:textColor="@color/colorBai"
                android:textColorHint="@color/colorBai"
                />
            <Button
                android:id="@+id/log_but"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_log"
                android:background="@drawable/ripple"
                android:textColor="@color/coloroff"
                />
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_forgetpassword"
                    android:textColor="@color/coloroff"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_newregister"
                    android:textColor="@color/coloroff"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
