<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <android.support.v4.view.ViewPager
            android:id="@+id/tow_viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11"
            ></android.support.v4.view.ViewPager>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/px2"
            android:background="@color/colorPrimaryDark"
            />
        <io.github.leibnik.wechatradiobar.WeChatRadioGroup
            android:id="@+id/tow_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <io.github.leibnik.wechatradiobar.WeChatRadioButton
                android:id="@+id/tow_home_rad"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/app_home"
                app:focus_icon="@drawable/yb2"
                app:defocus_icon="@drawable/ya"
                app:focus_color="@color/coloroff"
                android:textColor="@color/colorgray"
                android:textSize="10dp"
                android:checked="true"
                />
            <io.github.leibnik.wechatradiobar.WeChatRadioButton
                android:id="@+id/tow_video_rad"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/app_video"
                app:focus_icon="@drawable/yj2"
                app:defocus_icon="@drawable/yi"
                app:focus_color="@color/coloroff"
                android:textColor="@color/colorgray"
                android:textSize="10dp"
                />
            <io.github.leibnik.wechatradiobar.WeChatRadioButton
                android:id="@+id/tow_tiny_rad"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:button="@null"
                app:focus_icon="@drawable/yh2"
                app:defocus_icon="@drawable/yg"
                android:text="@string/app_tiny"
                app:focus_color="@color/coloroff"
                android:textColor="@color/colorgray"
                android:textSize="10dp"
                />
            <io.github.leibnik.wechatradiobar.WeChatRadioButton
                android:id="@+id/tow_main_rad"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:button="@null"
                app:focus_icon="@drawable/yd2"
                app:defocus_icon="@drawable/yc"
                android:text="@string/app_main"
                app:focus_color="@color/coloroff"
                android:textColor="@color/colorgray"
                android:textSize="@dimen/px20"
                />
        </io.github.leibnik.wechatradiobar.WeChatRadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/px520"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/colorAccent"
        ></LinearLayout>
</android.support.v4.widget.DrawerLayout>
